Shaders now call UniformUpdate to update value changes when shader was not active

--- a/test/Makefile
+++ b/test/Makefile
@@ -48,7 +48,7 @@ re:
 
 
 %.o : %.cpp
-	$(COMPILER) $(FLAGS) -I ../include -c $^ -o $@
+	$(COMPILER) $(FLAGS) -I ../include -I ../other -c $^ -o $@
 
 $(ARC) :
 	@$(MAKE) -C $(ARC_DIR) all
