changed a few things to better understand how OpenCL works

--- a/other/FileParse/Makefile
+++ b/other/FileParse/Makefile
@@ -5,7 +5,8 @@ FILES_CPP = \
 	DebugManager.cpp \
 	uint.cpp \
 	BitStream.cpp \
-	DataStream.cpp
+	DataStream.cpp \
+	FileIO.cpp
 
 FILES_PNG_CPP = \
 	PNG/Chunk.cpp \
