--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,6 +54,15 @@
 		"cinttypes": "cpp",
 		"typeinfo": "cpp",
 		"variant": "cpp",
-		"fstream": "cpp"
+		"fstream": "cpp",
+		"condition_variable": "cpp",
+		"cstring": "cpp",
+		"ratio": "cpp",
+		"iomanip": "cpp",
+		"mutex": "cpp",
+		"semaphore": "cpp",
+		"sstream": "cpp",
+		"stop_token": "cpp",
+		"thread": "cpp"
 	}
 }
