openCL simple test works

--- a/test/Makefile
+++ b/test/Makefile
@@ -9,7 +9,8 @@ MAINS = \
 	inst.cpp \
 	basic_openCL.cpp \
 	better_openCL.cpp \
-	my_openCL.cpp
+	my_openCL.cpp \
+	test_inst_CL.cpp
 
 EXES = $(MAINS:.cpp=.exe)
 
