got it working on the MACs. made a TODO file of things to do (duh).

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,15 +1,15 @@
 
-COMPILER = c++
+COMPILER = c++ -std=c++11
 
 FLAGS = -Wall -Wextra -Werror
 
 
 
 MAINS = \
-	inst.cpp \
-	basic_openCL.cpp \
-	better_openCL.cpp \
-	my_openCL.cpp
+	inst.cpp
+#	basic_openCL.cpp \
+#	better_openCL.cpp \
+#	my_openCL.cpp
 
 EXES = $(MAINS:.cpp=.exe)
 
@@ -48,7 +48,9 @@ re:
 
 
 %.exe : $(MAINS_DIR)%.cpp
-	$(COMPILER) $(FLAGS) -I ../include -I ../other -o $@ $^ $(ARC) E:/Utility/msys32/ucrt64/lib/libOpenCL.dll.a -lgdi32
+#	$(COMPILER) $(FLAGS) -I ../include -I ../other -o $@ $^ $(ARC) E:/Utility/msys32/ucrt64/lib/libOpenCL.dll.a -lgdi32
+#	$(COMPILER) $(FLAGS) -I ../include -I ../other -o $@ $^ $(ARC) -lgdi32
+	$(COMPILER) $(FLAGS) -I ../include -I ../other -o $@ $^ $(ARC) -lglfw
 
 $(ARC) :
 	@$(MAKE) -C $(ARC_DIR) all
