new Instance system that I slapped together. wrote down some Ideas ins include/Graphics/Buffer/text.txt

--- a/test/Makefile
+++ b/test/Makefile
@@ -8,6 +8,7 @@ FLAGS = -Wall -Wextra -Werror
 MAINS = \
 	test.cpp \
 	inst.cpp \
+	inst_new.cpp \
 	test_inst_CL.cpp
 #	basic_openCL.cpp \
 #	better_openCL.cpp \
