added some FileManagement stuff. moved PNG_Image into Image class

--- a/other/FileParse/Makefile
+++ b/other/FileParse/Makefile
@@ -2,11 +2,14 @@
 NAME = fileParser.a
 
 FILES_CPP = \
+	../FileManager/FileContext.cpp \
+	../FileManager/DirectoryContext.cpp \
+	../FileManager/Image.cpp \
+	\
 	DebugManager.cpp \
 	uint.cpp \
 	BitStream.cpp \
-	DataStream.cpp \
-	FileIO.cpp
+	DataStream.cpp 
 
 FILES_PNG_CPP = \
 	PNG/Chunk.cpp \
