--- a/test/Makefile
+++ b/test/Makefile
@@ -6,13 +6,8 @@ FLAGS = -Wall -Wextra -Werror
 
 
 MAINS = \
-	test.cpp \
-	inst.cpp \
-	test_inst_CL.cpp
-#	basic_openCL.cpp \
-#	better_openCL.cpp \
-#	my_openCL.cpp \
-#	test_inst_CL.cpp
+	ParticleSimulation.cpp \
+	DefaultInstances.cpp
 
 EXES = $(MAINS:.cpp=.exe)
 
