changed Instance Data stuff to have a more general name. made simple .obj parser. currently only load corners and faces. now working on loading Material and how to handle normals

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -6,8 +6,9 @@ FLAGS = -Wall -Wextra -Werror
 
 
 MAINS = \
-	ParticleSimulation.cpp \
-	DefaultInstances.cpp
+	OBJ_Parse.cpp \
+	DefaultInstances.cpp \
+	ParticleSimulation.cpp
 
 EXES = $(MAINS:.cpp=.exe)
 
