EntryContainer now allocates Pointers for Entrys instead of in a vector. PH_S3D.vert now uses rotation matrix.

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -6,11 +6,10 @@ FLAGS = -Wall -Wextra -Werror
 
 
 MAINS = \
-	ParticleSimulation.cpp
+	LightTest.cpp
 #	OBJ_Parse.cpp \
 #	DefaultInstances.cpp \
 #	ParticleSimulation.cpp \
-#	LightTest.cpp
 
 EXES = $(MAINS:.cpp=.exe)
 
