changed Angle to use Matrix, right now a function needs to be called to calc the Matrix. probably dont need that since rotating back just uses the transposed matrix. or just calc the Point the other way. but it works for now. might put the Matrix stuff into a seperate struct as well. did that already in the CL kernel

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -6,10 +6,10 @@ FLAGS = -Wall -Wextra -Werror
 
 
 MAINS = \
-	LightTest.cpp
-#	OBJ_Parse.cpp \
-#	DefaultInstances.cpp \
-#	ParticleSimulation.cpp \
+	DefaultInstances.cpp \
+	LightTest.cpp \
+	OBJ_Parse.cpp \
+	ParticleSimulation.cpp \
 
 EXES = $(MAINS:.cpp=.exe)
 
