changed some things to work on mac. the OBJ Shaders dont find the Uniforms and dont show anything, not sure why. also no openCL currently

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -76,8 +76,8 @@ re:
 
 
 %.exe : $(MAINS_DIR)%.cpp $(ARC)
-	$(COMPILER) $(FLAGS) -I ../include -I ../other -o $@ $^ $(WIN_ARGS)
-#	$(COMPILER) $(FLAGS) -I ../include -I ../other -o $@ $^ $(MAC_ARGS)
+#	$(COMPILER) $(FLAGS) -I ../include -I ../other -o $@ $^ $(WIN_ARGS)
+	$(COMPILER) $(FLAGS) -I ../include -I ../other -o $@ $^ $(MAC_ARGS)
 
 $(ARC) :
 	@$(MAKE) -C $(ARC_DIR) all
