optimized a few things in the FileManager headers. planing to put that stuff into its own repo. also trying to get rid of hard coded file paths at home. but it wont work and finding good documentation is hard

--- a/other/FileManager/Makefile
+++ b/other/FileManager/Makefile
@@ -16,7 +16,7 @@ FILES_CPP = \
 	\
 	Parsing/uint.cpp \
 	Parsing/BitStream.cpp \
-	Parsing/DataStream.cpp \
+	Parsing/ByteStream.cpp \
 	Parsing/LineCommand.cpp \
 	Parsing/DebugManager.cpp
 
