split TextureArray into TextureBase and Texture2DArray

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -37,9 +37,9 @@ endif
 
 
 MAINS = \
-	DefaultInstances.cpp \
-	LightTest.cpp \
-	test.cpp
+	DefaultInstances.cpp
+#	test.cpp
+#	LightTest.cpp \
 #	ParticleSimulation.cpp \
 #	OBJ_Parse.cpp \
 
