openGL Makefile now also gives includes and librarys. the -l flags for openGL dont want to work in the Makefile. also the window sometimes dosent open on Mac

--- a/other/OpenGL/Makefile
+++ b/other/OpenGL/Makefile
@@ -13,6 +13,8 @@ FILES_OBJ = $(FILES_SRC:.c=.o)
 
 
 
+################################################################
+
 $(NAME) : $(FILES_OBJ)
 	ar -rcs $(NAME) $(FILES_OBJ)
 
@@ -33,7 +35,64 @@ re:
 
 .PHONY: all clean fclean re
 
+################################################################
+
+
+
 
 
 %.o : %.c
 	cc $(FLAGS) -c $^ -o $@
+
+
+
+
+
+
+
+################################################################
+
+LIBRARYS = $(NAME)
+INCLUDES = ../
+
+librarys:
+	@echo $(LIBRARYS)
+
+includes:
+	@echo $(INCLUDES)
+
+.PHONY: librarys includes
+
+################################################################
+
+
+
+
+
+#ifeq ($(OS), Windows_NT)
+#	CheckOS := Windows
+#else
+#	CheckOS := $(shell uname -s)
+#endif
+#
+#ifeq ($(CheckOS), Windows)
+#LIBRARYS += \
+#	-lglfw3 \
+#	-lOpenCL \
+#	-lgdi32
+#endif
+#
+#ifeq ($(CheckOS), Darwin)
+#LIBRARYS += \
+#	-lglfw
+#endif
+
+#	dosent want to work ?
+#	make librarys only gives $(NAME)
+#	maybe I'm doing something wrong
+#	also the order matters
+#	openCL isnt needed for regular openGL stuff
+#	but when I include it later I might need to use -lgdi32 a second time
+#	which would be unoptimal
+
+
