--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,18 +1,9 @@
 
 
 
-FANCY_NAME := YMT/examples
-COLOR_REPO := \e[38;2;127;127;127m
-COLOR_TYPE := \e[38;2;127;255;127m
-COLOR_FILE := \e[38;2;127;127;255m
-COLOR_NONE := \e[m
-
-
-
-COMPILER = c++ -std=c++11
-FLAGS = -Wall -Wextra -Werror
-
-
+################################################################
+#                           OS Stuff                           #
+################################################################
 
 ifeq ($(OS), Windows_NT)
 	CheckOS := Windows
@@ -20,21 +11,40 @@ else
 	CheckOS := $(shell uname -s)
 endif
 
+FANCY_NAME := YMT/examples
+
 ifeq ($(CheckOS), Windows)
 OS_ARGS := \
 	-lglfw3 \
 	-lOpenCL \
 	-lgdi32
+
+FANCY_ECHO := echo -e
+COLOR_REPO := \e[38;2;127;127;127m
+COLOR_TYPE := \e[38;2;127;255;127m
+COLOR_FILE := \e[38;2;127;127;255m
+COLOR_NONE := \e[m
+
 endif
 
 ifeq ($(CheckOS), Darwin)
 OS_ARGS := \
 	-lglfw
+
+FANCY_ECHO := echo
+COLOR_REPO := \033[38;2;127;127;127m
+COLOR_TYPE := \033[38;2;127;255;127m
+COLOR_FILE := \033[38;2;127;127;255m
+COLOR_NONE := \033[m
+
 endif
 
+################################################################
 
 
 
+COMPILER = c++ -std=c++11
+FLAGS = -Wall -Wextra -Werror
 
 MAINS = \
 	OBJ_Parse.cpp
@@ -49,15 +59,6 @@ MAINS_DIR = mains/
 
 
 
-ARC = \
-	../other/OpenGL/openGL.a
-#	../YMT.a \
-#	../other/FileManager/FileManager.a
-
-
-
-
-
 
 
 ################################################################
@@ -65,19 +66,19 @@ ARC = \
 ################################################################
 
 all:
-	@echo -e "$(COLOR_REPO)$(FANCY_NAME): $(COLOR_TYPE)Target: $(COLOR_FILE)$@$(COLOR_NONE)"
+	@$(FANCY_ECHO) "$(COLOR_REPO)$(FANCY_NAME): $(COLOR_TYPE)Target: $(COLOR_FILE)$@$(COLOR_NONE)"
 	@$(MAKE) $(EXES) -s
 
 clean: repos_clean
-	@echo -e "$(COLOR_REPO)$(FANCY_NAME): $(COLOR_TYPE)Target: $(COLOR_FILE)$@$(COLOR_NONE)"
+	@$(FANCY_ECHO) "$(COLOR_REPO)$(FANCY_NAME): $(COLOR_TYPE)Target: $(COLOR_FILE)$@$(COLOR_NONE)"
 
 fclean: repos_fclean
-	@echo -e "$(COLOR_REPO)$(FANCY_NAME): $(COLOR_TYPE)Target: $(COLOR_FILE)$@$(COLOR_NONE)"
+	@$(FANCY_ECHO) "$(COLOR_REPO)$(FANCY_NAME): $(COLOR_TYPE)Target: $(COLOR_FILE)$@$(COLOR_NONE)"
 	@$(MAKE) clean -s
 	@rm -f $(EXES)
 
 re:
-	@echo -e "$(COLOR_REPO)$(FANCY_NAME): $(COLOR_TYPE)Target: $(COLOR_FILE)$@$(COLOR_NONE)"
+	@$(FANCY_ECHO) "$(COLOR_REPO)$(FANCY_NAME): $(COLOR_TYPE)Target: $(COLOR_FILE)$@$(COLOR_NONE)"
 	@$(MAKE) fclean -s
 	@$(MAKE) all -s
 
@@ -86,11 +87,11 @@ re:
 ################################################################
 
 
-
-
+test:
+	echo -e "\e[38;2;0;255;0masd\e[masd"
 
 %.exe : $(MAINS_DIR)%.cpp repos
-	@echo -e "$(COLOR_REPO)$(FANCY_NAME): $(COLOR_TYPE)Compiling: $(COLOR_FILE)$@$(COLOR_NONE)"
+	@$(FANCY_ECHO) "$(COLOR_REPO)$(FANCY_NAME): $(COLOR_TYPE)Compiling: $(COLOR_FILE)$@$(COLOR_NONE)"
 	@$(COMPILER) $(FLAGS) $(ARGS_INCLUDES) -o $@ $< $(ARGS_LIBRARYS) $(OS_ARGS)
 
 
@@ -108,18 +109,18 @@ ARGS_LIBRARYS = $(foreach library, $(LIBRARYS), $(library))
 ARGS_INCLUDES = $(foreach include, $(INCLUDES), -I$(include))
 
 librarys:
-	@echo '===='
-	@echo $(LIBRARYS)
-	@echo '===='
-	@echo $(ARGS_LIBRARYS)
-	@echo '===='
+	@$(FANCY_ECHO) '===='
+	@$(FANCY_ECHO) $(LIBRARYS)
+	@$(FANCY_ECHO) '===='
+	@$(FANCY_ECHO) $(ARGS_LIBRARYS)
+	@$(FANCY_ECHO) '===='
 
 includes:
-	@echo '===='
-	@echo $(INCLUDES)
-	@echo '===='
-	@echo $(ARGS_INCLUDES)
-	@echo '===='
+	@$(FANCY_ECHO) '===='
+	@$(FANCY_ECHO) $(INCLUDES)
+	@$(FANCY_ECHO) '===='
+	@$(FANCY_ECHO) $(ARGS_INCLUDES)
+	@$(FANCY_ECHO) '===='
 
 .PHONY: librarys includes
 
@@ -142,23 +143,23 @@ work:
 	@$(MAKE) $(EXES) -s
 
 repos:
-#	@echo -e "$(COLOR_REPO)$(FANCY_NAME): $(COLOR_TYPE)Target: $(COLOR_FILE)$@$(COLOR_NONE)"
+#	@$(FANCY_ECHO) "$(COLOR_REPO)$(FANCY_NAME): $(COLOR_TYPE)Target: $(COLOR_FILE)$@$(COLOR_NONE)"
 	@$(MAKE) -C $(YMT_DIR) -s
 
 repos_all:
-#	@echo -e "$(COLOR_REPO)$(FANCY_NAME): $(COLOR_TYPE)Target: $(COLOR_FILE)$@$(COLOR_NONE)"
+#	@$(FANCY_ECHO) "$(COLOR_REPO)$(FANCY_NAME): $(COLOR_TYPE)Target: $(COLOR_FILE)$@$(COLOR_NONE)"
 	@$(MAKE) -C $(YMT_DIR) all -s
 
 repos_clean:
-#	@echo -e "$(COLOR_REPO)$(FANCY_NAME): $(COLOR_TYPE)Target: $(COLOR_FILE)$@$(COLOR_NONE)"
+#	@$(FANCY_ECHO) "$(COLOR_REPO)$(FANCY_NAME): $(COLOR_TYPE)Target: $(COLOR_FILE)$@$(COLOR_NONE)"
 	@$(MAKE) -C $(YMT_DIR) clean -s
 
 repos_fclean:
-#	@echo -e "$(COLOR_REPO)$(FANCY_NAME): $(COLOR_TYPE)Target: $(COLOR_FILE)$@$(COLOR_NONE)"
+#	@$(FANCY_ECHO) "$(COLOR_REPO)$(FANCY_NAME): $(COLOR_TYPE)Target: $(COLOR_FILE)$@$(COLOR_NONE)"
 	@$(MAKE) -C $(YMT_DIR) fclean -s
 
 repos_rm:
-#	@echo -e "$(COLOR_REPO)$(FANCY_NAME): $(COLOR_TYPE)Target: $(COLOR_FILE)$@$(COLOR_NONE)"
+#	@$(FANCY_ECHO) "$(COLOR_REPO)$(FANCY_NAME): $(COLOR_TYPE)Target: $(COLOR_FILE)$@$(COLOR_NONE)"
 	@$(MAKE) -C $(YMT_DIR) repos_rm -s
 
 .PHONY: repos
