logs now stored in examples

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,17 @@
 
+#	Object Files
 *.o
 *.c.obj
 obj/
 
+#	Archive Files
 *.a
 
+#	Executable Files
 *.exe
 
+#	Log Files
+logs/
 
-
+#	other Projects / Repositorys
 other/FileManager
